# extend_python_by_c

./: CMakeLists.txt
class/: myclass.c
function/: myfunc.c
main_idea/: mymath.c
