CMAKE_MINIMUM_REQUIRED(VERSION 3.7)
project(extend_python)


SET(INCLUDES "")
SET(SOURCES "")
SET(LIBRARIES "")

LIST(APPEND INCLUDES "/usr/include/python3.5")
LIST(APPEND INCLUDES "${CMAKE_CURRENT_SOURCE_DIR}/hello_world")
INCLUDE_DIRECTORIES(${INCLUDES})

FILE(GLOB_RECURSE SOURCES_HELLO_WORLD "${CMAKE_CURRENT_SOURCE_DIR}/main_idea/*.c")
FILE(GLOB_RECURSE SOURCES_HELLO_WORLD "${CMAKE_CURRENT_SOURCE_DIR}/function/*.c")
LIST(APPEND SOURCES ${SOURCES_HELLO_WORLD})

add_library(extend_python ${SOURCES})
