CMAKE_MINIMUM_REQUIRED(VERSION 3.7)
project(extend_python)


SET(INCLUDES "")
SET(SOURCES "")
SET(LIBRARIES "")

LIST(APPEND INCLUDES "/usr/include/python3.5")
LIST(APPEND INCLUDES "${CMAKE_CURRENT_SOURCE_DIR}/hello_world")
INCLUDE_DIRECTORIES(${INCLUDES})

FILE(GLOB_RECURSE SOURCES_MAIN_IDEA "${CMAKE_CURRENT_SOURCE_DIR}/main_idea/*.c")
FILE(GLOB_RECURSE SOURCES_FUNCTION "${CMAKE_CURRENT_SOURCE_DIR}/function/*.c")
FILE(GLOB_RECURSE SOURCES_FUNCTION "${CMAKE_CURRENT_SOURCE_DIR}/class/*.c")
LIST(APPEND SOURCES ${SOURCES_MAIN_IDEA})
LIST(APPEND SOURCES ${SOURCES_FUNCTION})

add_library(extend_python ${SOURCES})
